syntax = "proto3";
import "google/protobuf/timestamp.proto";
import "google/protobuf/duration.proto";
import "google/protobuf/empty.proto";

option go_package = "github.com/rancher/opni/pkg/plugins/cortex/pkg/apis/cortexadmin";

package cortexadmin;

service CortexAdmin {
  rpc AllUserStats(google.protobuf.Empty) returns (UserIDStatsList) {
    option (google.api.http) = {
      get: "/all_user_stats"
    };
  }
  rpc WriteMetrics(WriteRequest) returns (WriteResponse) {
    option (google.api.http) = {
      post: "/write_metrics"
      body: "*"
    };
  }
  rpc Query(QueryRequest) returns (QueryResponse) {
    option (google.api.http) = {
      get: "/query"
      additional_bindings {
        post: "/query"
        body: "*"
      }
    };
  }
  rpc QueryRange(QueryRangeRequest) returns (QueryResponse) {
    option (google.api.http) = {
      get: "/query_range"
      additional_bindings {
        post: "/query_range"
        body: "*"
      }
    };
  }
  rpc GetRule(RuleRequest) returns (QueryResponse) {
    option (google.api.http) = {
      get: "/get_rule/{groupName}"
      additional_bindings {
        post: "/get_rule/{groupName}"
        body: "*"
      }
    };
  }

  rpc LoadRules(YamlRequest) returns (google.protobuf.Empty) {
    option (google.api.http) = {
      get: "/load_rules"
      additional_bindings {
        post: "/load_rules"
        body : "*",
      }
    };
  }
  rpc DeleteRule(RuleRequest) returns (google.protobuf.Empty) {
    option (google.api.http) = {
      get: "/delete_rules/{groupName}"
      additional_bindings {
        post: "/delete_rules/{groupName}"
        body : "*",
      }
    };
  }
}

message UserIDStatsList {
  repeated UserIDStats items = 2;
}

message UserIDStats {
  string userID = 1;
  double ingestionRate = 2;
  uint64 numSeries = 3;
  double APIIngestionRate = 4; // title case to match cortex
  double RuleIngestionRate = 5; // title case to match cortex
}

message WriteRequest {
  string clusterID = 1;
  repeated TimeSeries timeseries = 2;
  repeated MetricMetadata metadata = 3;
}

message WriteResponse {}

message TimeSeries {
  repeated Label labels = 1;
  repeated Sample samples = 2;
  repeated Exemplar exemplars = 3;
}

message Label {
  string name = 1;
  string value = 2;
}

message Sample {
  int64 timestampMs = 1;
  double value = 2;
}

message Exemplar {
  repeated Label labels = 1;
  double value = 2;
  int64 timestampMs = 3;
}

message MetricMetadata {
  enum MetricType {
    UNKNOWN        = 0;
    COUNTER        = 1;
    GAUGE          = 2;
    HISTOGRAM      = 3;
    GAUGEHISTOGRAM = 4;
    SUMMARY        = 5;
    INFO           = 6;
    STATESET       = 7;
  }

  MetricType type = 1;
  string metricFamilyName = 2;
  string help = 4;
  string unit = 5;
}

message QueryRequest {
  repeated string tenants = 1;
  string query = 2;
}

message QueryRangeRequest {
  repeated string tenants = 1;
  string query = 2;
  google.protobuf.Timestamp start = 3;
  google.protobuf.Timestamp end = 4;
  google.protobuf.Duration step = 5;
}

message RuleRequest {
  repeated string tenants = 1;
  string groupName = 2;
}

message YamlRequest{
  repeated string tenants = 1;
  string yaml = 2;
}

message QueryResponse {
  bytes data = 2;
}